# fileupload-fullstack-demo

./: README.md  docker-compose.yaml
.github/workflows/: backend-app.yml
backend/: .dockerignore  Dockerfile  README.md  pyproject.toml
backend/app/: main.py
backend/app/dependencies/: auth.py  notifications.py
backend/app/models/: files.py
backend/app/routers/: __init__.py  files.py  health.py  index.py  notifications.py
backend/app/services/: __init__.py  notifications.py
backend/app/utils/: auth.py
backend/tests/: conftest.py  test_api.py
backend/tests/test_api/: conftest.py  test_files.py  test_health.py  test_index.py
frontend/: Dockerfile  README.md  index.html  script.js  style.css
frontend/app/: script.js
