[tool.poetry]
name = "app"
version = "0.1.0"
description = ""
authors = ["Fedir Alifirenko <fedor.alifirenko@gmail.com>"]
readme = "README.md"


[tool.poetry.dependencies]
python = "^3.12"
fastapi = "^0.115.2"


[tool.poetry.group.dev.dependencies]
pytest = "^8.3.3"
httpx = "^0.27.2"
mypy = "^1.12.0"
taskipy = "^1.13.0"
black = "^24.10.0"


[tool.taskipy.tasks]
lint = "task lint_black && task lint_mypy"
lint_black = "black --check app tests"
lint_mypy = "mypy app tests"
test = "pytest"


[tool.mypy]
strict = true


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
